Fixes job list alignment

--- a/src/ui-lib/sass/05-components/03-organisms/_job-list.scss
+++ b/src/ui-lib/sass/05-components/03-organisms/_job-list.scss
@@ -25,7 +25,7 @@
     }
   }
 
-  li {
+  li:not(:first-child) {
     margin-top: $grav-sp-s;
   }
 }
